Adjusted alignment so cards stick to bottom and table sticks above them. Stopped form submission from reloading page.

--- a/src/bluepea/static/style.css
+++ b/src/bluepea/static/style.css
@@ -3,6 +3,7 @@
 */
 .table-container {
     height: 30%;
+    padding-bottom: 1em;
 }
 .table-container table {
     display: flex;
@@ -30,7 +31,6 @@
     table-layout: fixed;
 }
 
-
 div .ui.card>.content.small-header {
     flex-grow: 0;
 }
@@ -42,6 +42,35 @@ pre.content.code-block {
 td {
     overflow-x: hidden;
     text-overflow: ellipsis;
+}
+
+.no-border, .tab.segment.no-border {
+    border: none;
+}
+
+.card-container {
+    position: relative;
+    height: calc(70% - 1em); /* Based on table-container height */
+}
+
+.fill-container {
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+.small-padding {
+    padding: 1em;
+}
+
+.below-tabs, div.tab.segment.below-tabs {
+    position: absolute;
+    bottom: 0;
+    top: 8em;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
 .spinning {
